--- a/index.html
+++ b/index.html
@@ -65,6 +65,10 @@
     </div>
 
     
+<script type="text/javascript">
+var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
+document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3F47b2490f02c9e1032bd7344f8f186c03' type='text/javascript'%3E%3C/script%3E"));
+</script>
 
   </body>
 </html>
