--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <h3>
 <a name="%E6%84%9F%E8%B0%A2%E4%BD%BF%E7%94%A8acdown" class="anchor" href="#%E6%84%9F%E8%B0%A2%E4%BD%BF%E7%94%A8acdown"><span class="octicon octicon-link"></span></a>感谢使用AcDown</h3>
 
-<p>AcDown项目自2010年发布，一直以来受到您的关注与厚爱，本人在此深表感谢。但由于身体情况不佳及工作繁忙等原因，AcDown今后将不再提供新功能，但会一直维持对已有功能的优化、改进与修复。希望AcDown能继续给您的生活带来方便。</p>
+<p>AcDown项目自2010年发布，一直以来受到您的关注与厚爱，本人在此深表感谢。但由于我身体情况不佳及工作繁忙等原因，AcDown今后将不再继续开发新功能，但会一直维持对已有功能的优化、改进与修复。希望AcDown能继续给您的生活带来方便。</p>
 
 <h3>
 <a name="%E8%81%94%E7%B3%BB%E4%BD%9C%E8%80%85" class="anchor" href="#%E8%81%94%E7%B3%BB%E4%BD%9C%E8%80%85"><span class="octicon octicon-link"></span></a>联系作者</h3>
@@ -41,12 +41,14 @@
 <h3>
 <a name="%E4%B8%80%E4%BA%9B%E4%BD%BF%E7%94%A8%E5%B0%8F%E6%8A%80%E5%B7%A7" class="anchor" href="#%E4%B8%80%E4%BA%9B%E4%BD%BF%E7%94%A8%E5%B0%8F%E6%8A%80%E5%B7%A7"><span class="octicon octicon-link"></span></a>一些使用小技巧</h3>
 
-<p>因为AcDown的功能很多而大部分又藏得比较深，这里来说一些可能会用得上，且平时难以接触到的功能。</p>
+<p>因为AcDown很多功能隐藏得比较深，这里来说一些可能会用得上，且平时难以接触到的功能。</p>
 
 <ul>
 <li>只下载弹幕：新建下载任务时点击“更多选项”，在“允许下载以下类型的文件”中，只选中“字幕/弹幕”选项</li>
 <li>A/B站下载分P时在文件名前自动加入编号：
 点击主界面的“插件”按钮-&gt;选中A/B站插件-&gt;点击“插件属性”-&gt;将默认的“标题\子标题(分段).扩展名”修改为“标题**子编号-**子标题(分段).扩展名”（示例）-&gt;保存</li>
+<li>下载弹幕时自动将弹幕重命名，以方便多次收集弹幕：
+操作步骤同上，在文件名中加入“日期”或“时间”变量即可</li>
 <li>离线时播放弹幕：
 主界面切换到“弹幕播放选项卡”，选中“Bilibili播放器”，点击“更新此播放器缓存”链接，稍等片刻即可。</li>
 </ul><h3>
@@ -65,10 +67,6 @@
     </div>
 
     
-<script type="text/javascript">
-var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
-document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3F47b2490f02c9e1032bd7344f8f186c03' type='text/javascript'%3E%3C/script%3E"));
-</script>
 
   </body>
 </html>
