--- a/index.html
+++ b/index.html
@@ -9,16 +9,6 @@
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
     <title>AcDown</title>
-    <script>
-    var _hmt = _hmt || [];
-    (function() {
-      var hm = document.createElement("script");
-      hm.src = "//hm.baidu.com/hm.js?47b2490f02c9e1032bd7344f8f186c03";
-      var s = document.getElementsByTagName("script")[0]; 
-      s.parentNode.insertBefore(hm, s);
-    })();
-    </script>
-
   </head>
 
   <body>
@@ -76,7 +66,11 @@
       </footer>
     </div>
 
-    
+<script type="text/javascript">
+var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
+document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3F47b2490f02c9e1032bd7344f8f186c03' type='text/javascript'%3E%3C/script%3E"));
+</script>
+
 
   </body>
 </html>
